k8s/iskstarter-wallet.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: iskstarter-wallet
  name: iskstarter-wallet-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iskstarter-wallet
  template:
    metadata:
      labels:
        app: iskstarter-wallet
    spec:
      containers:
      - name: iskstarter-wallet-pod
        image: index.docker.io/robbilie/eas:iskstarter
        imagePullPolicy: Always
        ports:
        volumeMounts:
        - name: config
          mountPath: "/etc/secrets"
          readOnly: true
      volumes:
      - name: config
        secret:
          secretName: iskstarter-config
      imagePullSecrets:
      - name: myregistrykey
