k8s/wallet.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: iskstarter-wallet
  name: iskstarter-wallet-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iskstarter-wallet
  template:
    metadata:
      labels:
        app: iskstarter-wallet
    spec:
      containers:
      - name: iskstarter-wallet-pod
        image: robbilie/iskstarter
        imagePullPolicy: Always
        ports:
        volumeMounts:
        - name: config
          mountPath: "/etc/secrets"
          readOnly: true
        readinessProbe:
          httpGet:
            path: /ping
            port: 4001
          initialDelaySeconds: 60
          timeoutSeconds: 60
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 4001
          initialDelaySeconds: 60
          timeoutSeconds: 60
      volumes:
      - name: config
        secret:
          secretName: iskstarter-config
      nodeSelector:
        kubernetes.io/hostname: "sheliak"
      imagePullSecrets:
      - name: myregistrykey
