k8s/iskstarter-web.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: iskstarter-service
  labels:
    app: iskstarter-web
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 4001
    protocol: TCP
  selector:
    app: iskstarter-web
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: iskstarter-web
  name: iskstarter-web-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iskstarter-web
  template:
    metadata:
      labels:
        app: iskstarter-web
    spec:
      containers:
      - name: iskstarter-web-pod
        image: index.docker.io/robbilie/eas:iskstarter
        imagePullPolicy: Always
        ports:
        - containerPort: 4001
        volumeMounts:
        - name: config
          mountPath: "/etc/secrets"
          readOnly: true
        readinessProbe:
          httpGet:
            path: /
            port: 4001
          initialDelaySeconds: 60
          timeoutSeconds: 60
        livenessProbe:
          httpGet:
            path: /
            port: 4001
          initialDelaySeconds: 60
          timeoutSeconds: 60
      volumes:
      - name: config
        secret:
          secretName: iskstarter-config
      imagePullSecrets:
      - name: myregistrykey
