k8s/iskstarter-ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: iskstarter-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - isk-starter.com
    - www.isk-starter.com
    secretName: iskstarter-ingress-tls
  rules:
  - host: isk-starter.com
    http:
      paths:
      - path: /
        backend:
          serviceName: iskstarter-service
          servicePort: 80
  - host: www.isk-starter.com
    http:
      paths:
      - path: /
        backend:
          serviceName: iskstarter-service
          servicePort: 80
